--- a/index.html
+++ b/index.html
@@ -270,30 +270,12 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
-                        <figcaption class="caption text-center">
-                            <h3>Dr. J.A. Jeewanie
-                                <small>University of Ruhuna, Sri Lanka</small>
-                            </h3>
-                            <!-- <ul class="social-links">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                            </ul> -->
-                        </figcaption>
-                    </figure>
-                </div>
-                <!-- /.col-sm-6 -->
-
-                <div class="col-sm-6 col-md-3">
-                    <figure class="thumbnail">
                         <a href="#"><img src="img/DrJulianNanayakkara.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Dr. L.D.J.F. Nanayakkara
                                 <small>University of Kelaniya, Sri Lanka</small>
                             </h3>
+                            
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -305,13 +287,34 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+            </div>
+            <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrJanakaWijenayaka.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Dr. W.M.J Wijayanayake 
                                 <small>University of Kelaniya, Sri Lanka </small>
+                            </h3>
+                            
+                            <!-- <ul class="social-links">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                            </ul> -->
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                            <h3>Dr. J.A. Jeewanie
+                                <small>University of Ruhuna, Sri Lanka</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
