--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
@@ -211,8 +212,8 @@
                 <!-- /.col-sm-6 -->
 
             </div>
-            <!-- .row -->
             <div class="row">
+
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrDonGalagedara.jpg" class="img-responsive" alt="Image"></a>
@@ -287,6 +288,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
+
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
@@ -669,7 +671,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3 col-sm-6">
                     <div class="session">
                         <time><b>Conference Chair</b></time>
                             <div class="orgComMemPicture">
@@ -679,7 +681,7 @@
                         <h3>Dr. P.L.S. Peter<span>suren@kln.ac.lk</span></h3>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-3 col-sm-6">
                     <div class="session">
                         <time><b>Conference Secretary</b></time>
                             <div class="orgComMemPicture"> 
@@ -688,26 +690,43 @@
                         <h3>Ms W.M.Samanthi Weerabahu<span>samanthiw@kln.ac.lk</span></h3>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-3 col-sm-6">
                     <div class="session">
-                        <time><b>Conference Co-Chairs</b></time>
+                        <time><b>Conference Co-Chair</b></time>
+                            <div class="orgComMemPicture"> 
+                                <a href="#"><img src="img/drcrajapaksha.jpg" class="img-responsive" alt="Image"></a>
+                            </div>
                         <h3>Dr. R.A.C.P Rajapakshe<span>chathura@kln.ac.lk</span></h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="session">
+                        <time><b>Conference Co-Chair</b></time>
+                            <div class="orgComMemPicture"> 
+                                <a href="#"><img src="img/drdwick.jpg" class="img-responsive" alt="Image"></a>
+                            </div>
                         <h3>Dr. D.N Wickramarachchi<span>dilani@kln.ac.lk</span></h3>
                     </div>
                 </div>
-                <div class="col-md-6">
+            </div>
+            <div class="row">
+                <!-- div class="col-xs-12"> -->
                     <div class="session">
                         <time><b>Members</b></time>
-                        <h3>Ms. Samya Dimithrie<span>samya@kln.ac.lk</span></h3>
-                        <h3>Ms H.A.R Nilani<span>nilania@kln.ac.lk</span></h3>
-                        <h3>Mr. Buddhika Jayawardena<span>buddhikaj@kln.ac.lk</span></h3>
-                        <h3>Mr. Nirmala Liyanaarachchi<span>nirmala@kln.ac.lk</span></h3>
-                        <h3>Ms. Kasuni Vidanagamachchi<span>kasuniv@kln.ac.lk</span></h3>
-                        <h3>Mr. Bhanu Watawana<span>bhanu@kln.ac.lk</span></h3>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Ms. Samya Dimithrie<span>samya@kln.ac.lk</span></h3>
+                                <h3>Ms H.A.R Nilani<span>nilania@kln.ac.lk</span></h3>
+                                <h3>Mr. Buddhika Jayawardena<span>buddhikaj@kln.ac.lk</span></h3>
+                            </div>
+                            <div class="col-md-6">
+                                <h3>Mr. Nirmala Liyanaarachchi<span>nirmala@kln.ac.lk</span></h3>
+                                <h3>Ms. Kasuni Vidanagamachchi<span>kasuniv@kln.ac.lk</span></h3>
+                                <h3>Mr. Bhanu Watawana<span>bhanu@kln.ac.lk</span></h3>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
     </section>
