--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <figure class="thumbnail">
                         <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Dr. J.A. Jeewanie
+                            <h3>Dr. Jeewanie Jayasinghe
                                 <small>University of Ruhuna, Sri Lanka</small>
                             </h3>
                             <!-- <ul class="social-links">
