Changed font size in Registration content and submission dates

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
                     <p><center>
                         <!-- <strong>Important Dates</strong><br> -->
                         <div class="importantDateColItem"><strong>Submission of Abstracts</strong><br>
-                        25th January 2018<br></div>
+                        <h5 style="color:#0e1555;">25th January 2018</h5></div>
                         <div class="importantDateColItem"><strong>Notification of Acceptance</strong><br>
-                        15th February 2018<br></div>
+                        <h5 style="color:#0e1555;">15th February 2018</h5></div>
                         <div class="importantDateColItem"><strong>Final paper Submission</strong><br>
-                        1st March 2018<br></div>
+                        <h5 style="color:#0e1555;">1st March 2018</h5></div>
                         <div class="importantDateColItem"><strong>Early-bird Registration</strong><br>
-                        7th March 2018<br></div>
+                        <h5 style="color:#0e1555;">7th March 2018</h5></div>
                         <div class="importantDateColItem"><strong>Conference</strong><br>
-                        29th March 2018</div>
+                        <h5 style="color:#0e1555;">29th March 2018</h5></div>
                         </center>
                     </p>
                 </div>
@@ -237,8 +237,8 @@
                         <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Dr. Lalith Goonatilake
-                                <small>Aston University,Austria </small>
-                                <small>Former Director,UNIDO</small>
+                                
+                                <small>Former Director,  UNIDO - Training & Capacity Building</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -381,9 +381,9 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>CONTENT</h1>
-                        <p  style="color: black">
+                        <h5>
                             The conference will be operated with two tracks; the Smart Computing track and the Industrial and Systems Engineering track. The conference solicits papers addressing original research from the following areas.
-                        </p>
+                        </h5>
                     </div>
                 </div>
             </div>
@@ -441,7 +441,7 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>REGISTRATION</h1>
-                        <p style="color: black">Call +94(0)11 2903282-5 or email to scse@kln.ac.lk</p>
+                         <h5 style="color:#0e1555;">Call +94(0)11 2903282-5 or email to scse@kln.ac.lk</h5>
                     </div>
                 </div>
             </div>
@@ -454,9 +454,9 @@
                         </div>
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i">
-                                <li>Local LKR 1000</li>
-                                <li>SAARC US$ 50</li>
-                                <li>Other Countries US$ 75</li>
+                                <li> <h5 style="color:black;">Local LKR 1000</h5></li>
+                                <li> <h5 style="color:black;">SAARC US$ 50</h5></li>
+                                <li> <h5 style="color:black;">Other Countries US$ 75</h5></li>
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
@@ -473,9 +473,9 @@
                         </div>
                         <div class="pricing-detail">
                             <ul class="pricing-list pink-i">
-                                <li>Local LKR 1500</li>
-                                <li>SAARC US$ 85</li>
-                                <li>Other Countries US$ 125</li>
+                                <li><h5 style="color:black;">Local LKR 1500</h5></li>
+                                <li><h5 style="color:black;">SAARC US$ 85</h5></li>
+                                <li><h5 style="color:black;">Other Countries US$ 125</h5></li>
                             </ul>
                         </div>
                         <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
