--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p><center>
                         <!-- <strong>Important Dates</strong><br> -->
                         <div class="importantDateColItem"><strong>Submission of Abstracts</strong><br>
-                        <h5 style="color:#0e1555;">25th January 2018</h5></div>
+                        <h5 style="color:#0e1555;">31st January 2018</h5></div>
                         <div class="importantDateColItem"><strong>Notification of Acceptance</strong><br>
                         <h5 style="color:#0e1555;">15th February 2018</h5></div>
                         <div class="importantDateColItem"><strong>Final paper Submission</strong><br>
