--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Dr. Lalith Goonatilake
-                                <small>Director - Trade Capacity Building, UNIDO</small>
+                                <small>Former Director - Trade Capacity Building, UNIDO</small>
                             </h3>
                             <!-- <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
