--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section id="section-intro" class="section-wrapper about-event">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-7    ">
                     <p class="lead ircscseTextJustify">
                         Welcome to the first International Research Conference in Smart Computing and Systems Engineering (SCSE) organized by the Department of Industrial Management, Faculty of Science, University of Kelaniya, Sri Lanka, which will be held on the 29th of March 2018 in Colombo, Sri Lanka.
                     </p>
@@ -98,7 +98,7 @@
                         The primary objective of the SCSE conference is to create a platform for research scholars, academia, researchers and industry experts to present their research in the areas of Smart Computing and Systems Engineering. The conference encourages submissions covering both theoretical and application aspects in these areas and in interdisciplinary areas. The colloquium will provide the delegates with a forum to discuss the most recent innovations and trends, as well as practical challenges encountered in industrial and services sectors, solutions adopted, and network and build collaborations with fellow researchers from across the world.
                     </p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <!-- <address>
                         <strong>Department of Industrial Management</strong><br>
                         Faculty of Science<br>
@@ -121,6 +121,14 @@
                         <h5 style="color:#0e1555;">29th March 2018</h5></div>
                         </center>
                     </p>
+                    <!-- <p class="lead ircscseTextJustify" style="color: #fd367e;"> -->
+                    <p>
+                        <center>
+                            <h5 style="color:#fd367e;">
+                                Selected abstracts will be considered for publishing in the forthcoming journal of Systems and Software Engineering.
+                            </h5>
+                        </center>
+                    </p>
                 </div>
             </div>
         </div>
@@ -136,8 +144,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
+                <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/ProfTakaoTerano.jpg" class="img-responsive" alt="Image"></a>
@@ -155,7 +163,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/ProfRichardLai.jpg" class="img-responsive" alt="Image"></a>
@@ -173,7 +181,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/ProfPubuduPathirana.png" class="img-responsive" alt="Image"></a>
@@ -191,7 +199,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/ProfKoliyaPulasinghe.jpg" class="img-responsive" alt="Image"></a>
@@ -210,10 +218,9 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
             </div>
             <div class="row">
-
+                <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrDonGalagedara.jpg" class="img-responsive" alt="Image"></a>
@@ -231,7 +238,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrLalithGoonatilake.jpg" class="img-responsive" alt="Image"></a>
@@ -249,7 +256,25 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 3 -->
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="#"><img src="img/TerrencePerera.jpg" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                               <h3>Prof. Terrence Perera
+                                <small>Sheffield Hallam University, UK</small>
+                            </h3>
+                            <!-- <ul class="social-links">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                            </ul> -->
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
@@ -267,7 +292,27 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+            </div>
+            <div class="row">
+                <!-- 1 -->
+                <div class="col-sm-6 col-md-3">
+                    <figure class="thumbnail">
+                        <a href="#"><img src="img/AselaKulatunga.jpg" class="img-responsive" alt="Image"></a>
+                        <figcaption class="caption text-center">
+                               <h3>Dr. Asela Kulatunga
+                                <small>University of Peradeniya, Sri Lanka</small>
+                            </h3>
+                            <!-- <ul class="social-links">
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                            </ul> -->
+                        </figcaption>
+                    </figure>
+                </div>
+                <!-- /.col-sm-6 -->
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrJulianNanayakkara.jpg" class="img-responsive" alt="Image"></a>
@@ -287,9 +332,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
-            </div>
-            <div class="row">
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrJanakaWijenayaka.jpg" class="img-responsive" alt="Image"></a>
@@ -309,7 +352,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/drJeewaniJayasinghe.png" class="img-responsive" alt="Image"></a>
@@ -328,7 +371,9 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+            </div>
+            <div class="row">
+                <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrNiroshinie Fernando.jpg" class="img-responsive" alt="Image"></a>
@@ -347,7 +392,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/DrSachinthaPitigala.jpg" class="img-responsive" alt="Image"></a>
@@ -359,13 +404,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
-            </div>
-            <!-- .row -->
-
-            <!-- row 4 -->
-            <!-- AW, RW, SJ, KW, -->
-            <div class="row">
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/aw.jpg" class="img-responsive" alt="Image"></a>
@@ -377,7 +416,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/rw.jpg" class="img-responsive" alt="Image"></a>
@@ -389,7 +428,9 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+            </div>
+            <div class="row">
+                <!-- 1 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/sj.jpg" class="img-responsive" alt="Image"></a>
@@ -401,7 +442,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 2 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/kw.jpg" class="img-responsive" alt="Image"></a>
@@ -413,12 +454,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
-            </div>
-
-            <!-- row 5 -->
-            <!--  TR, CR, DW, SP -->
-            <div class="row">
+                <!-- 3 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/tr.jpg" class="img-responsive" alt="Image"></a>
@@ -430,7 +466,7 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
-
+                <!-- 4 -->
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/drcrajapaksha.jpg" class="img-responsive" alt="Image"></a>
@@ -442,8 +478,9 @@
                     </figure>
                 </div>
                 <!-- /.col-sm-6 -->
+            </div>
 
-                <div class="col-sm-6 col-md-3">
+                <!-- <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
                         <a href="#"><img src="img/drdwick.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
@@ -453,7 +490,6 @@
                         </figcaption>
                     </figure>
                 </div>
-                <!-- /.col-sm-6 -->
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
@@ -464,10 +500,8 @@
                             </h3>
                         </figcaption>
                     </figure>
-                </div>
-                <!-- /.col-sm-6 -->
+                </div> -->
 
-            </div>
         </div>
         <!-- /.container -->
     </section>
