--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <p>
                         <center>
                             <h5 style="color:#fd367e;">
-                                Selected abstracts will be considered for publishing in the forthcoming Journal of Software & Systems Engineering.
+                                Selected abstracts will be considered for publishing in the forthcoming Journal of Systems & Software Engineering.
                             </h5>
                         </center>
                     </p>
