--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
                                     <i class="fa fa-phone" aria-hidden="true"></i> +94(0)11 2903282-5 / +94(0)11 2914482 <br>
                                     <i class="fa fa-fax" aria-hidden="true"></i> +94(0)11 2903281 <br>
                                     <i class="fa fa-envelope" aria-hidden="true"></i> im@kln.ac.lk <br>
-                                    <i class="fa fa-globe" aria-hidden="true"></i> dim.kln.ac.lk <br>
+                                    <i class="fa fa-globe" aria-hidden="true"></i> <a href="http://dim.kln.ac.lk" target="_blank"> dim.kln.ac.lk</a> <br>
                                 </p>
                             </div>
                             <!-- <div class="col-md-12"> -->
