--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                     <div class="section-title">
                         <h1>ACCOMMODATION</h1>
                         <h5>
-                            SCSE 2018 offers highly competitive rates at official hotels.
+                            SCSE 2018 offers highly competitive rates at official hotels. Please contact Conference Secretary to make necessary arrangements.
                         </h5>
                     </div>
                 </div>
@@ -839,7 +839,7 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h5>
-                            Contact & Assistance<br>
+                            Contact & Assistance:<br>
                             <br>
                             Ms. Samanthi Weerabahu<br>
                             Conference Secretary<br>
@@ -1156,7 +1156,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; ircSCSE. All rights reserved | v1.3 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; ircSCSE. All rights reserved | v1.31 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
