--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
                         <li><a id="navbarSubmission" class="page-scroll" href="#section-guidelines">Guidelines</a></li>
-                        <li><a class="page-scroll" href="#section-pricing">Registration</a></li>
+                        <li><a id="navbarRegister" class="page-scroll" href="#section-pricing">Registration</a></li>
                         <li><a class="page-scroll" href="#section-accommodation">Accommodation</a></li>
                         <li><a class="page-scroll" href="#organiziners">Organizers</a></li>
                         <li><a class="page-scroll" href="#section-venue">Contact</a></li>
@@ -83,6 +83,7 @@
             <font size="50"><b>International Research Conference on<br><br>Smart Computing and Systems Engineering</b></font>
             <p class="lead"><br>Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">Guidelines</button>
+            <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Register</button>
             <!-- <a href="res/IRCSCSE Guidelines for abstract submission - Ver 2.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a> -->
         </div>
     </div>
@@ -692,8 +693,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>REGISTRATION</h1>
-                         <h5 style="color:#0e1555;">Call +94(0)11 2903282-5 or email to scse@kln.ac.lk</h5>
+                        <h1><img src="img/RegisterNow2.png" style="width: 150px; vertical-align: text-bottom; float: left; margin-right: -220px; margin-top: -150px; margin-bottom: -150px; padding-left: 10px; transform: rotate(-35deg);">REGISTRATION</h1>
+                        <h5 style="color:#0e1555;">Call +94(0)11 2903282-5 or email to scse@kln.ac.lk to register, or follow instructions below to register online</h5>
                     </div>
                 </div>
             </div>
@@ -735,6 +736,43 @@
                     <!-- /.pricing-table-wrapper -->
                 </div>
                 <!-- .col-sm-4 -->
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="pricing-table-default text-center">
+                        <div class="pricing-detail">
+                            <ul class="pricing-list pink-i" style="text-align: left;">
+                                <li> <h5 style="color:black;">INSTRUCTIONS:</h5></li>
+                                <li> <h5 style="color:black;">Under <b>Payment Instructions</b> select <b>Faculty of Science</b> from the dropdown list for <b>Faculty</b></h5></li>
+                                <li> <h5 style="color:black;">Select <b>International Research Conference on Smart Computing and Systems Engineering</b> from the dropdown list for <b>Payment For</b></h5></li>
+                                <li> <h5 style="color:black;">Select <b>Payment Category</b> and enter <b>Applicaiton/ Registration Number</b></h5></li>
+                                <li> <h5 style="color:black;">Enter contact details and proceed to pay online</h5></li>
+                            </ul>
+                        </div>
+                        <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
+                    </div>
+                    <!-- /.pricing-table-wrapper -->
+                </div>
+                <!-- .col-sm-4 -->
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="pricing-table-default text-center">
+                        <div class="pricing-detail">
+                            <div class="col-sm-12">
+                                <center>
+                                    <a href="https://sis.kln.ac.lk/PayService/ClientApp/" class="btn btn-primary scse-wide-button">Register Online</a>
+                                </center>
+                            </div>
+                        </div>
+                        <!-- <a href="#" class="btn btn-primary">BUY TICKET</a> -->
+                    </div>
+                    <!-- /.pricing-table-wrapper -->
+                </div>
+                <!-- .col-sm-4 -->
+
+
 
                 <!-- <div class="col-sm-4">
                     <div class="pricing-table-default text-center">
